[package]
name = "kitamura"
version = "0.1.2"
edition = "2021"
description = "HTML templating engine"
license = "MIT"
repository = "https://github.com/JoelWi/kitamura"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
serde = { version = "1", features = ["derive"]}
serde_json = "1"
