[package]
name = "kitamura"
version = "0.2.0"
edition = "2021"
description = "Templating engine"
license = "MIT"
repository = "https://github.com/JoelWi/kitamura"
documentation = "https://docs.rs/kitamura"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
serde = { version = "1", features = ["derive"]}
serde_json = "1"
